js/js.translator/testData/incremental/invalidation/addJsFunCall/main/m.kt
fun box(stepId: Int, isWasm: Boolean): String {
    return callJsFunCall()
}
